kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myshoe-app
  labels:
    app: myshoe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myshoe
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: myshoe
    spec:
      containers:
        - name: app
          image: 470999030662.dkr.ecr.ap-south-1.amazonaws.com/myshoe-app:latest # replaced by CI
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: myshoe-service
  labels:
    app: myshoe
spec:
  selector:
    app: myshoe
  type: NodePort # ALB target group points to worker NodePort 30080
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
      name: http
