kubernetes/ingress-pvc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myshoe-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: myshoe.sytes.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myshoe-service
                port:
                  number: 80
